-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v1.4 - Jan 7, 2019

 + net.http: config: "proxy" - Connect via HTTP proxy server
 + GUI: Restore user-selected theme on startup
 + GUI: Playback -> "Select Audio Device" - Select playback audio device
 + GUI: Help -> "Edit GUI Themes..."
 - GUI: Help -> "Edit User Settings": Set the correct path for portable mode
   Set the path to application directory for this command if fmedia is
    configured in portable mode.
 + Load "fmedia-user.conf" in portable mode
 *! Moved "gui.gui.portable_conf" -> "core.portable_conf"
 - ICY: Couldn't play radio streams with "Content-Type: audio/aac"
 - file.out: Invalid characters in filename when using auto-naming (v0.22 bug)
   If the value of $-variable ends with a space, then it might result in
    corrupted output filename.


fmedia v1.3 - Dec 9, 2018

 + GUI: Parallel conversion (fmedia.conf::workers).
 + Parallel conversion from command line ('--parallel' switch)
 - .m4a write: Couldn't convert from broken .mp3
 - GUI: Conversion progress didn't update (v1.2 bug)
 - .flac read: Unsynchronized output from .cue files (v1.0 bug)
   Audio positioning could be incorrect for the tracks in .cue file.


fmedia v1.2 - Nov 10, 2018

 + GUI: support custom themes (theme.conf file)
 + GUI: 'File'->'Theme: Dark' - a simple dark theme
 * GUI: instant playlist switching
 - GUI: button text could be empty if no icon is set (FF v18.10 bug)


fmedia v1.1 - Oct 14, 2018

 + GUI: use icons on playback control buttons
 + GUI: load multiple playlists from previous session on startup
 * GUI: faster playlists (show 1000 items 5x faster)
 - GUI: 'Add URL' command didn't work for radio stream URLs (v0.23 bug)
 + GUI: 'List' -> 'Random' - Choose the next track randomly
 + --random - Choose the next track randomly
 + TUI: show track number